@@ -138,6 +138,7 @@
 /* event list */
 #define MOD_CFG_EVENT_LIST_SECTION  "EVENT_LIST"
 #define MOD_CFG_EVENT_LIST_REFRESH "REFRESH"
-
+#define MOD_CFG_EVENT_LIST_SORT_COLUMN "SORT_COLUMN"
+#define MOD_CFG_EVENT_LIST_SORT_ORDER "SORT_ORDER"
 
 #endif
