@@ -1,3 +1,12 @@
+2011-09-28 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/config-keys.c
+    * src/gtk-event-list.c
+    * src/gtk-event-list.h
+    Save and restore sort information for event lists.
+
+
 2011-09-25 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
